--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,17 +27,33 @@ services:
         max-size: "10m"
         max-file: "5"
 
-  agent:
-    build: ./agents/python-node-yarn
-    env_file: .env
-    depends_on:
-      - redis
-    #     if you need docker inside the agent
-    #     (http://jpetazzo.github.io/2015/09/03/do-not-use-docker-in-docker-for-ci/)
+  # agent:
+  #   build: ./agents/python-node-yarn
+  #   env_file: .env
+  #   depends_on:
+  #     - redis
+  #   #     if you need docker inside the agent
+  #   #     (http://jpetazzo.github.io/2015/09/03/do-not-use-docker-in-docker-for-ci/)
+  #   volumes:
+  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #   labels:
+  #     - "traefik.enable=false"
+  #   logging:
+  #     driver: json-file
+  #     options:
+  #       max-size: "10m"
+  #       max-file: "5"
+  teamcity-agent:
+    image: jetbrains/teamcity-agent
+    environment:
+      - SERVER_URL=http://server:8111
+      - AGENT_NAME=regular_agent
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     labels:
       - "traefik.enable=false"
+    depends_on:
+      - redis
     logging:
       driver: json-file
       options:
