--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
   agent:
     build: ./agents/python-node-yarn
     environment:
-      - SERVER_URL=http://server:8111
+      - SERVER_URL="http://server:8111"
       - AGENT_NAME=docker_compose_agent
     depends_on:
       - redis
