--- a/agents/python-node-yarn/Dockerfile
+++ b/agents/python-node-yarn/Dockerfile
@@ -60,3 +60,5 @@ RUN curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 RUN apt-get update && apt-get install yarn
 RUN yarn -v
+
+USER buildagent
