--- a/agents/python-node-yarn/Dockerfile
+++ b/agents/python-node-yarn/Dockerfile
@@ -60,5 +60,8 @@ RUN curl -sL https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
 RUN echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
 RUN apt-get update && apt-get install yarn
 RUN yarn -v
+RUN groupadd docker
+RUN usermod -aG docker buildagent
+RUN newgrp docker 
 
 USER buildagent
