--- a/agents/docker-compose/Dockerfile
+++ b/agents/docker-compose/Dockerfile
@@ -2,6 +2,8 @@ FROM jetbrains/teamcity-agent
 
 USER root
 
+RUN echo "root:root" | chpasswd
+
 # Install Python stuff
 RUN apt-get update && apt-get install -y \
     docker-compose
