Agregando maven a docker file

--- a/agents/docker-compose/Dockerfile
+++ b/agents/docker-compose/Dockerfile
@@ -4,7 +4,8 @@ USER root
 
 # Install Python stuff
 RUN apt-get update && apt-get install -y \
-    docker-compose
+    docker-compose \
+    maven
 
 
 ##USER buildagent
